############################################################
EFA Version 3.0.1.6 Changes
############################################################

Issue #328  Bug             - ClamAV Not Updating
Issue #331  Enhancement     - Move Version into MailWatch
PR #332     Bug             - Increase the number of characters allowed for the TLD

############################################################
EFA Version 3.0.1.5 Changes
############################################################

Issue #299  Enhancement     - Enhance menus in EFA-Configure (allow back out)
Issue #320  Bug             - /root/.spamassassin inaccessible
Issue #322  Enhancement     - Geoip update during EFA-Init 
Issue #323  Bug             - clamav-unofficial-sigs not running

############################################################
EFA Version 3.0.1.4 Changes
############################################################

Issue #315  Regression      - Regression in Quarantine Reports

############################################################
EFA Version 3.0.1.3 Changes
############################################################

Issue #308  Bug             - ClamAV Status Page blank
Issue #309  Bug             - Anacron daily notifications from mailscanner
Issue #311  Bug             - Quarantine Permissions Issue in 3.0.1.2
Issue #312  Bug             - MailScanner access to EFA-Config denied

Updated clamav, clamd, mysql, and mysql-server

############################################################
EFA Version 3.0.1.2 Changes
############################################################

Issue #92   Bug/Enhancement - Mailwatch Single Recipient Release
Issue #165  Enhancement     - Upgrade MailScanner
Issue #206  Enhancement     - Default Max Archive Depth to Non Zero
Issue #210  Enhancement     - Add EFA Version to GUI
Issue #228  Bug             - Greylist toggle overwrites custom smtpd_recipient_restrictions