@@ -9,6 +9,8 @@ EFA-Configure
   Verify support for long TLDs
 MailScanner/ClamAV
   Verify that ClamAV is updating via cron
+MailScanner
+  Verify that MCP rules process properly
 
 ############################################################
 EFA Version 3.0.1.2 TEST PLAN
