@@ -90,7 +90,17 @@ function run_update() {
   sed -i '/^        echo "<h5 style=\\\"width:300px;text-align:center\\\">Version/d' /var/www/html/mailscanner/login.php
   sed -i '/^        fclose($filever);/d' /var/www/html/mailscanner/login.php
 
-  
+  # Issue #326 MCP not functional
+  ln -s /etc/mail/spamassassin/init.pre /etc/MailScanner/mcp/init.pre
+  ln -s /etc/mail/spamassassin/v310.pre /etc/MailScanner/mcp/v310.pre
+  ln -s /etc/mail/spamassassin/v312.pre /etc/MailScanner/mcp/v312.pre
+  ln -s /etc/mail/spamassassin/v320.pre /etc/MailScanner/mcp/v320.pre
+  ln -s /etc/mail/spamassassin/v330.pre /etc/MailScanner/mcp/v330.pre
+  ln -s /etc/mail/spamassassin/v340.pre /etc/MailScanner/mcp/v340.pre
+  ln -s /etc/mail/spamassassin/v341.pre /etc/MailScanner/mcp/v341.pre
+  mkdir -p /var/spool/postifx/.spamassassin
+  chmod postfix:postfix /var/spool/postfix/.spamassassin
+
   # Exit Maintenance Mode
   mv -f /var/EFA/EFA-Monitor.cron /etc/cron.d/ > /dev/null 2>&1
   sed -i "/^exclude=/ c\exclude=$YUM_EXCLUDES" /etc/yum.conf
